--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,15 @@ version: '3.8'
  
 services:
  
+    # mpox-api:
+    #   build: .
+    #   container_name: mpox-api
+    #   ports:
+    #     - "3000:3000"
+    #   depends_on:
+    #     - mongo
+
+
     mongo:
       image: mongo
       container_name: mongo_mpox
