--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
     "express": "^4.21.0",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/nodemailer": "^6.4.15",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2"
   }
