--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "env-var": "^7.5.0",
     "express": "^4.21.0",
     "mongoose": "^8.6.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2"
